Hello everyone

VLC crashes near end of playback (assert when draining and seeking)

Crash occurs when the video plays to the position that is about to end after dragging the progress bar. This crash does not always occur, but it is very frequent

Please help me, THANKS!

  • iOS 15.2
  • VLC version: 4.0.0
  • Language: Swift 5

image image